--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -331,3 +331,8 @@ article
       iframe
         margin-top 0
 
+    
+.share {
+        padding: 0px 75px 30px 40px;
+        margin-bottom: 15px;
+}
