--- a/layout/_partial/comment.ejs
+++ b/layout/_partial/comment.ejs
@@ -17,7 +17,7 @@
 <!-- Duoshuo Comment BEGIN -->
 	<div class="ds-thread"></div>
 <script type="text/javascript">
-var duoshuoQuery = {short_name:"zippera"};
+var duoshuoQuery = {short_name:"bestvivi"};
 	(function() {
 		var ds = document.createElement('script');
 		ds.type = 'text/javascript';ds.async = true;
