--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -1,4 +1,4 @@
 <section>
-Theme of <a href="https://github.com/zippera/lightum">Lightum</a>, Improved from <a href="https://github.com/hexojs/hexo-theme-light">Light</a>, by <a href="/">zippera</a> 
+Copyrights © 2015 YangWei的博客. All Rights Reserved.
 </section>
 <div class="clearfix"></div>
